--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 	}
 }
 
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -29,6 +32,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile ('org.flywaydb:flyway-core:4.2.0')
+	compile ('com.google.code.gson:gson:2.7')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
