--- a/episodic-shows/src/main/resources/application.properties
+++ b/episodic-shows/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 security.basic.enabled=false
 security.user.password=weak
 management.security.enabled=false
+flyway.enabled=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
