--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile ('org.flywaydb:flyway-core:4.2.0')
 	compile ('com.google.code.gson:gson:2.7')
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+	compile("org.springframework.boot:spring-boot-starter-amqp")
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
