--- a/episodic-events/build.gradle
+++ b/episodic-events/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile("org.springframework.boot:spring-boot-starter-amqp")
+	compile ('com.google.code.gson:gson:2.7')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
