--- a/episodic-shows/build.gradle
+++ b/episodic-shows/build.gradle
@@ -26,6 +26,10 @@ repositories {
 	maven { url "http://repo.spring.io/snapshot" }
 }
 
+ext {
+    springCloudServicesVersion = '1.3.1.RELEASE'
+    springCloudVersion = 'Dalston.RELEASE'
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -36,8 +40,17 @@ dependencies {
 	compile ('com.google.code.gson:gson:2.7')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile("org.springframework.boot:spring-boot-starter-amqp")
+    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+
 }
